# AL-Wallpaper

./: .gitignore  Cargo.toml  README.md
data/: catalog.json  factions.json  favorites.json
docs/: PLAN.md
render/: .gitignore  aliases.tsv  autostart-wallpaper.sh  default.txt  index.html  package-lock.json  package.json  render.js  thumb.js  wallpaper.sh
scripts/: apply.sh  build_catalog.js  build_favorites.js  power-daemon.sh  prerender.sh  preview.js  preview_anim.js  rotate-daemon.sh  rotate.sh  state.js
src/: app.rs  apply.rs  main.rs  model.rs  theme.rs
