[package]
name = "al-wallpaper"
version = "0.1.0"
edition = "2021"
description = "Browse Azur Lane Live2D skins by faction and apply them as live wallpapers"

[[bin]]
name = "al-wallpaper"
path = "src/main.rs"

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png", "gif"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"

[profile.release]
opt-level = 2
